fix search alignment in mobile menu

--- a/style.css
+++ b/style.css
@@ -264,19 +264,12 @@ object {
 
 /*--------------------------[ SEARCH FORM ]-----------------------------------*/
 
-nav .navbar-form.navbar-right {
-	padding-right: 0;
-}
-/* fix for overlap */
 @media screen and (min-width: 768px) {
   .navbar-nav.navbar-right {
     float: left !important;
   }
   .navbar-nav.navbar-right {
     float: left !important;
-  }
-  .navbar-form.navbar-right:last-child {
-    padding-right: 15px;
   }
 }
 
